src/core/core.less
@import "coreVariables";

html body {
  width: 100%;
  height: 100%;
  font-family: "Helvetica Neue Light", "Lucida Grande", "Calibri", "Arial", sans-serif;
  font-size: 1.2em;
  background-color: @white;
  color: @dark-grey;
}

.app {
  margin-top: 5px;
}

.full-height {
  height: 100%;
}

.full-width {
  width: 100%;
}

.container-fluid {
  height: 100%;
}

.toast-top-right {
  top: 50px;
  right: 12px;
}

.form-default {
  background-color: #f2f2f2;
  border: 1px solid #ccc;
  margin-top: 5px;
  padding: 20px;
  box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
}

.validation-messages {
  position: relative;
}

.validation-messages, .message {
  opacity: 1;
  transition: .3s linear all;
}

.message {
  font-size: .8em;
  position: absolute;
  width: 100%;
  color: #a94442;
}

.validation-messages.ng-enter.ng-enter-active,
.message.ng-enter.ng-enter-active {
  opacity: 1;
  top: 0;
}

.validation-messages.ng-enter,
.message.ng-enter {
  opacity: 0;
  top: -10px;
}

.validation-messages.ng-leave,
.message.ng-leave {
  opacity: 1;
  top: 0;
}

.validation-messages.ng-leave-active,
.message.ng-leave-active {
  opacity: 0;
  top: -10px;
}

